fix(button): fixed disabled button with poor visibility https://github.com/rdlabo-team/ionic-theme-ios26/issues/14

--- a/src/components/ion-button.scss
+++ b/src/components/ion-button.scss
@@ -210,6 +210,14 @@
         opacity: 1; // for ion-back-button
       }
     }
+    &.button-disabled {
+      opacity: 1;
+
+      --color: rgba(var(--ion-text-color-rgb, 0, 0, 0), 0.5);
+      &.ion-color {
+        --color: rgba(var(--ion-color-base-rgb, var(--ion-text-color-rgb, 0, 0, 0)), 0.5);
+      }
+    }
   }
 
   &.button-has-icon-only,
